@@ -123,4 +123,9 @@ public class Limits {
   public synchronized LimitExceededException violation() {
     return firstViolation;
   }
+
+  public static synchronized void reset(Configuration conf) {
+    isInited = false;
+    init(conf);
+  }
 }
